# fpl-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: api.md
src/: cli.rs  client.rs  config.rs  dates.rs  error.rs  main.rs  output.rs  secrets.rs
src/commands/: accounts.rs  alerts.rs  api.rs  auth.rs  bills.rs  config.rs  history.rs  init.rs  lookup.rs  meter.rs  mod.rs  outages.rs  payments.rs  profile.rs  set_credential.rs  summary.rs  update.rs  usage.rs
