[package]
name = "fpl-cli"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Manage your Florida Power & Light account from the command line — Keychain-secured, agent-friendly. Work in progress."
license = "MIT OR Apache-2.0"
repository = "https://github.com/piekstra/fpl"
homepage = "https://github.com/piekstra/fpl"
readme = "README.md"
keywords = ["fpl", "utility", "electric", "billing", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fpl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
pk-cli-core = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.2", features = ["reqwest"] }
pk-cli-secrets = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.2" }
pk-cli-config = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.2" }
pk-cli-selfupdate = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.2" }
pk-cli-auth = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.2" }
clap_complete = "4"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "cookies", "rustls-tls"] }


[profile.release]
strip = true
lto = true
opt-level = "z"
